[gd_scene load_steps=26 format=1]

[ext_resource path="res://Scripts/StartingMenu/Global.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Old Paper/old_paper_paper_1_1_800x500.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Boats/red.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Crates/mixed_crate_one.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scripts/StartingMenu/PlayerRunning.gd" type="Script" id=6]
[ext_resource path="res://Scenes/EnemyRunning.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scripts/StartingMenu/PlayButton.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Menu Buttons/medium size/normal/play_normal.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Menu Buttons/medium size/pressed/play_normal.png" type="Texture" id=10]
[ext_resource path="res://Scripts/StartingMenu/QuitButton.gd" type="Script" id=11]
[ext_resource path="res://Sprites/Menu Buttons/medium size/normal/quit_normal.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Menu Buttons/medium size/pressed/quit_normal.png" type="Texture" id=13]
[ext_resource path="res://Scripts/StartingMenu/CreditsButton.gd" type="Script" id=14]
[ext_resource path="res://Sprites/Menu Buttons/small size/normal/credits_normal.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Menu Buttons/small size/pressed/credits_normal.png" type="Texture" id=16]
[ext_resource path="res://Scripts/Achievement.gd" type="Script" id=17]
[ext_resource path="res://Sprites/Coins/star_coin_1_300x300.png" type="Texture" id=18]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=2]

resource/name = "button_press"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("PlaySP:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 9 ), ExtResource( 10 ) ]
}

[sub_resource type="RectangleShape2D" id=3]

custom_solver_bias = 0.0
extents = Vector2( 10, 10 )

[sub_resource type="Animation" id=4]

resource/name = "button_press"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("QuitSP:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 12 ), ExtResource( 13 ) ]
}

[sub_resource type="RectangleShape2D" id=5]

custom_solver_bias = 0.0
extents = Vector2( 79.7039, 10 )

[sub_resource type="Animation" id=6]

resource/name = "button_press"
length = 0.2
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CreditsSP:texture")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.1 ),
"transitions": FloatArray( 1, 1 ),
"update": 1,
"values": [ ExtResource( 15 ), ExtResource( 16 ) ]
}

[sub_resource type="RectangleShape2D" id=7]

custom_solver_bias = 0.0
extents = Vector2( 711.832, 10 )

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="Background" type="Node2D" parent="."]

editor/display_folded = true

[node name="OldPaper" type="Sprite" parent="Background"]

transform/pos = Vector2( 1536, 759 )
transform/scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 2 )

[node name="Ship" type="Sprite" parent="Background"]

visibility/opacity = 0.24
transform/pos = Vector2( 1797.52, 757.778 )
transform/scale = Vector2( 0.7, 0.7 )
texture = ExtResource( 3 )

[node name="Crate" type="Sprite" parent="Background"]

visibility/opacity = 0.24
transform/pos = Vector2( 1137.93, 543.788 )
transform/rot = -30.0
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Crate1" type="Sprite" parent="Background"]

visibility/opacity = 0.24
transform/pos = Vector2( 1195.83, 767.848 )
transform/rot = 130.0
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Crate2" type="Sprite" parent="Background"]

visibility/opacity = 0.24
transform/pos = Vector2( 1200.86, 1004.5 )
transform/rot = -26.0
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 4 )

[node name="Player" parent="." instance=ExtResource( 5 )]

editor/display_folded = true
visibility/opacity = 0.85
transform/pos = Vector2( 916, 614 )
transform/scale = Vector2( 0.1, 0.1 )
script/script = ExtResource( 6 )
y_direction = 1
x_direction = 1

[node name="Timer" type="Timer" parent="Player"]

process_mode = 1
wait_time = 0.5
one_shot = false
autostart = false

[node name="Enemy" parent="." instance=ExtResource( 7 )]

transform/pos = Vector2( 2116, 616 )
transform/scale = Vector2( 0.1, 0.1 )

[node name="Camera2D" type="Camera2D" parent="."]

transform/pos = Vector2( 1536, 759 )
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit/left = -10000000
limit/top = -10000000
limit/right = 10000000
limit/bottom = 10000000
drag_margin/h_enabled = true
drag_margin/v_enabled = true
smoothing/enable = false
smoothing/speed = 5.0
drag_margin/left = 0.2
drag_margin/top = 0.2
drag_margin/right = 0.2
drag_margin/bottom = 0.2

[node name="Play" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1534.6, 798.5 )
transform/scale = Vector2( 3.33, 1.51 )
input/pickable = true
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 3.17641, 0, 0, 3.18975, 0.715019, 1.31971 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 8 )

[node name="PlaySP" type="Sprite" parent="Play"]

transform/pos = Vector2( 0.42041, 0.993408 )
transform/scale = Vector2( 0.3003, 0.662252 )
texture = ExtResource( 9 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Play"]

transform/pos = Vector2( 0.715019, 1.31971 )
transform/scale = Vector2( 3.17641, 3.18975 )
shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Play"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/button_press = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="Play"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="Quit" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1536, 930 )
input/pickable = true
shapes/0/shape = SubResource( 3 )
shapes/0/transform = Matrix32( 10.6247, 0, 0, 4.86201, 0.367055, -0.00315285 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 11 )

[node name="QuitSP" type="Sprite" parent="Quit"]

texture = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Quit"]

transform/pos = Vector2( 0.367055, -0.00315285 )
transform/scale = Vector2( 10.6247, 4.86201 )
shape = SubResource( 3 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Quit"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/button_press = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="Quit"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="Credits" type="Area2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1890.67, 952 )
input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 2.45548, 0, -1.7679 )
shapes/0/trigger = false
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
script/script = ExtResource( 14 )

[node name="CreditsSP" type="Sprite" parent="Credits"]

texture = ExtResource( 15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Credits"]

transform/pos = Vector2( 0, -1.7679 )
transform/scale = Vector2( 1, 2.45548 )
shape = SubResource( 5 )
trigger = false
_update_shape_index = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="Credits"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/button_press = SubResource( 6 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="Timer" type="Timer" parent="Credits"]

process_mode = 1
wait_time = 0.2
one_shot = false
autostart = false

[node name="Achivements" type="Node2D" parent="."]

editor/display_folded = true
script/script = ExtResource( 17 )

[node name="StageOne" type="Node2D" parent="Achivements"]

editor/display_folded = true

[node name="Coin1" type="Sprite" parent="Achivements/StageOne"]

visibility/visible = false
transform/pos = Vector2( 1130, 780 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 18 )

[node name="Coin2" type="Sprite" parent="Achivements/StageOne"]

visibility/visible = false
transform/pos = Vector2( 1240, 780 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 18 )

[node name="Coin3" type="Sprite" parent="Achivements/StageOne"]

visibility/visible = false
transform/pos = Vector2( 1350, 780 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 18 )

[node name="StageTwo" type="Node2D" parent="Achivements"]

editor/display_folded = true
transform/pos = Vector2( 0, 100 )

[node name="Coin1" type="Sprite" parent="Achivements/StageTwo"]

visibility/visible = false
transform/pos = Vector2( 1130, 780 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 18 )

[node name="Coin2" type="Sprite" parent="Achivements/StageTwo"]

visibility/visible = false
transform/pos = Vector2( 1240, 780 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 18 )

[node name="Coin3" type="Sprite" parent="Achivements/StageTwo"]

visibility/visible = false
transform/pos = Vector2( 1350, 780 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 18 )

[node name="StageThree" type="Node2D" parent="Achivements"]

editor/display_folded = true
transform/pos = Vector2( 0, 200 )

[node name="Coin1" type="Sprite" parent="Achivements/StageThree"]

visibility/visible = false
transform/pos = Vector2( 1130, 780 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 18 )

[node name="Coin2" type="Sprite" parent="Achivements/StageThree"]

visibility/visible = false
transform/pos = Vector2( 1240, 780 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 18 )

[node name="Coin3" type="Sprite" parent="Achivements/StageThree"]

visibility/visible = false
transform/pos = Vector2( 1350, 780 )
transform/scale = Vector2( 0.25, 0.25 )
texture = ExtResource( 18 )

[node name="Floor" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1143.69, 714.807 )
input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 392.332, -5.55188 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]

transform/pos = Vector2( 392.332, -5.55188 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[node name="Ceil" type="StaticBody2D" parent="."]

editor/display_folded = true
transform/pos = Vector2( 1136.29, 518.641 )
input/pickable = false
shapes/0/shape = SubResource( 7 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 392.332, -5.55188 )
shapes/0/trigger = false
collision/layers = 1
collision/mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ceil"]

transform/pos = Vector2( 392.332, -5.55188 )
shape = SubResource( 7 )
trigger = false
_update_shape_index = 0

[connection signal="timeout" from="Play/Timer" to="Play" method="_on_Timer_timeout"]

[connection signal="timeout" from="Quit/Timer" to="Quit" method="_on_Timer_timeout"]

[connection signal="timeout" from="Credits/Timer" to="Credits" method="_on_Timer_timeout"]


